# flare_cpp

./: meson.build
assets/: ActionMenu.flr  PushButton.flr  effect.flr  meson.build
example/: build.sh  layout.hpp  main.cpp  meson.build
example/assets/: ActionMenu.flr  Ball.flr  FlareAnimation_ver1.pptx  Mi.flr  PathAnimation.flr  clippath.flr  evenodd.flr  loading2.flr
example/src/: main.cpp
flare/include/flare/: actor.hpp  actor_flags.hpp
flare/include/flare/animation/: actor_animation.hpp
flare/src/: actor.cpp  actor_artboard.cpp  actor_procedural_path.cpp  custom_property.cpp
flare/src/animation/keyframes/: keyframe_path_vertices.cpp
flare/src/path/: actor_base_path.cpp  actor_path.cpp
flare_math/include/flare_math/: aabb.hpp
flare_math/src/: aabb.cpp
flare_skia/include/flare_skia/: skr_actor.hpp  skr_actor_artboard.hpp  skr_actor_base_path.hpp  skr_actor_ellipse.hpp  skr_actor_path.hpp  skr_actor_rectangle.hpp  skr_actor_shape.hpp  skr_color_fill.hpp  skr_color_stroke.hpp  skr_drawable.hpp  skr_drawable_proxy.hpp  skr_fill.hpp  skr_stroke.hpp  to_skia.hpp
flare_skia/src/: skr_actor.cpp  skr_actor_artboard.cpp  skr_actor_base_path.cpp  skr_actor_ellipse.cpp  skr_actor_path.cpp  skr_actor_rectangle.cpp  skr_actor_shape.cpp  skr_color_fill.cpp  skr_color_stroke.cpp  skr_drawable.cpp  skr_drawable_proxy.cpp  skr_fill.cpp  skr_stroke.cpp
lib/: meson.build
lib/flare/: meson.build
lib/flare/inc/: meson.build
lib/flare/inc/flare/: actor.hpp  actor_artboard.hpp  actor_component.hpp  actor_drawable.hpp  actor_node.hpp  actor_shape.hpp  binary_reader.hpp  meson.build
lib/flare/inc/flare/animation/: actor_animation.hpp  meson.build
lib/flare/inc/flare/animation/interpolators/: meson.build
lib/flare/inc/flare/animation/keyframes/: meson.build
lib/flare/inc/flare/exceptions/: meson.build  overflow_exception.hpp  unsupported_version_exception.hpp
lib/flare/inc/flare/paint/: meson.build
lib/flare/inc/flare/path/: actor_base_path.hpp  meson.build
lib/flare/src/: actor_ik_constraint.cpp  actor_image.cpp  actor_procedural_path.cpp  actor_shape.cpp  binary_reader.cpp  jelly_component.cpp  meson.build
lib/flare/src/animation/: meson.build  property_animation.cpp
lib/flare/src/animation/interpolators/: meson.build
lib/flare/src/animation/keyframes/: meson.build
lib/flare/src/paint/: meson.build
lib/flare/src/path/: actor_base_path.cpp  meson.build
lib/flare_math/: meson.build
lib/flare_math/inc/: meson.build
lib/flare_math/inc/flare_math/: aabb.hpp  mat2d.hpp  meson.build
lib/flare_math/src/: aabb.cpp  meson.build
lib/flare_thorvg/: meson.build
lib/flare_thorvg/inc/: meson.build
lib/flare_thorvg/inc/flare_thorvg/: meson.build  thorvg_actor.hpp  thorvg_actor_artboard.hpp  thorvg_actor_base_path.hpp  thorvg_actor_ellipse.hpp  thorvg_actor_path.hpp  thorvg_actor_polygon.hpp  thorvg_actor_rectangle.hpp  thorvg_actor_shape.hpp  thorvg_actor_star.hpp  thorvg_actor_triangle.hpp  thorvg_color_fill.hpp  thorvg_color_stroke.hpp  thorvg_drawable.hpp  thorvg_drawable_proxy.hpp  thorvg_fill.hpp  thorvg_gradient_fill.hpp  thorvg_gradient_stroke.hpp  thorvg_radial_gradient_fill.hpp  thorvg_radial_gradient_stroke.hpp  thorvg_stroke.hpp
lib/flare_thorvg/src/: meson.build  thorvg_actor.cpp  thorvg_actor_artboard.cpp  thorvg_actor_base_path.cpp  thorvg_actor_ellipse.cpp  thorvg_actor_path.cpp  thorvg_actor_polygon.cpp  thorvg_actor_rectangle.cpp  thorvg_actor_shape.cpp  thorvg_actor_star.cpp  thorvg_actor_triangle.cpp  thorvg_color_fill.cpp  thorvg_color_stroke.cpp  thorvg_drawable.cpp  thorvg_drawable_proxy.cpp  thorvg_fill.cpp  thorvg_gradient_fill.cpp  thorvg_gradient_stroke.cpp  thorvg_radial_gradient_fill.cpp  thorvg_radial_gradient_stroke.cpp  thorvg_stroke.cpp
packaging/: flare.spec
