source_file = [
   'thorvg_actor.cpp',
   'thorvg_actor_artboard.cpp',
   'thorvg_actor_base_path.cpp',
   'thorvg_actor_ellipse.cpp',
   'thorvg_actor_path.cpp',
   'thorvg_actor_rectangle.cpp',
   'thorvg_actor_shape.cpp',
   'thorvg_actor_star.cpp',
   'thorvg_actor_triangle.cpp',
   'thorvg_color_fill.cpp',
   'thorvg_color_stroke.cpp',
   'thorvg_drawable.cpp',
   'thorvg_drawable_proxy.cpp',
   'thorvg_fill.cpp',
   'thorvg_gradient_fill.cpp',
   'thorvg_gradient_stroke.cpp',
   'thorvg_radial_gradient_fill.cpp',
   'thorvg_radial_gradient_stroke.cpp',
   'thorvg_stroke.cpp',
   'thorvg_actor_polygon.cpp'
]

flare_render_dep = declare_dependency(
   include_directories : thorvg_headers,
   sources : source_file
)
