paint_src = [
   'actor_color.cpp',
   'actor_color_fill.cpp',
   'actor_color_stroke.cpp',
   'actor_fill.cpp',
   'actor_gradient_color.cpp',
   'actor_gradient_fill.cpp',
   'actor_gradient_stroke.cpp',
   'actor_paint.cpp',
   'actor_radial_gradient.cpp',
   'actor_radial_gradient_fill.cpp',
   'actor_radial_gradient_stroke.cpp',
   'actor_stroke.cpp'
]

paint_dep = declare_dependency(
   include_directories : headers,
   sources : paint_src
)

