path_src = [
   'actor_base_path.cpp',
   'actor_ellipse.cpp',
   'actor_path.cpp',
   'actor_polygon.cpp',
   'actor_rectangle.cpp',
   'actor_star.cpp',
   'actor_triangle.cpp',
   'path_point.cpp',
   'straight_path_point.cpp'
]

path_dep = declare_dependency(
   include_directories : headers,
   sources : path_src
)
