install_headers([
	 'actor_color.hpp',
	 'actor_color_fill.hpp',
	 'actor_color_stroke.hpp',
	 'actor_fill.hpp',
	 'actor_gradient_color.hpp',
	 'actor_gradient_fill.hpp',
	 'actor_gradient_stroke.hpp',
	 'actor_paint.hpp',
	 'actor_radial_gradient.hpp',
	 'actor_radial_gradient_fill.hpp',
	 'actor_radial_gradient_stroke.hpp',
	 'actor_stroke.hpp',
	 'fill_rule.hpp',
	 'stroke_cap.hpp',
	 'stroke_join.hpp',
	 'trim_path.hpp'
        ], subdir : 'flare/paint')

