keyframe_src = [
        'keyframe.cpp',
        'keyframe_active_child.cpp',
        'keyframe_constraint_strength.cpp',
        'keyframe_corner_radius.cpp',
        'keyframe_custom_property.cpp',
        'keyframe_draw_order.cpp',
        'keyframe_fill_color.cpp',
        'keyframe_gradient.cpp',
        'keyframe_image_vertices.cpp',
        'keyframe_inner_radius.cpp',
        'keyframe_is_collision_enabled.cpp',
        'keyframe_length.cpp',
        'keyframe_numeric.cpp',
        'keyframe_opacity.cpp',
        'keyframe_paint_opacity.cpp',
        'keyframe_path_vertices.cpp',
        'keyframe_pos_x.cpp',
        'keyframe_pos_y.cpp',
        'keyframe_radial_gradient.cpp',
        'keyframe_rotation.cpp',
        'keyframe_scale_x.cpp',
        'keyframe_scale_y.cpp',
        'keyframe_sequence.cpp',
        'keyframe_shape_height.cpp',
        'keyframe_shape_width.cpp',
        'keyframe_stroke_end.cpp',
        'keyframe_stroke_offset.cpp',
        'keyframe_stroke_start.cpp',
        'keyframe_stroke_width.cpp',
        'keyframe_trigger.cpp',
        'keyframe_with_interpolation.cpp'
]

keyframe_dep = declare_dependency(
#   include_directories : headers,
   sources : keyframe_src
)

