install_headers([
	 'keyframe.hpp',
	 'keyframe_active_child.hpp',
	 'keyframe_color.hpp',
	 'keyframe_constraint_strength.hpp',
	 'keyframe_corner_radius.hpp',
	 'keyframe_custom_property.hpp',
	 'keyframe_draw_order.hpp',
	 'keyframe_gradient.hpp',
	 'keyframe_image_vertices.hpp',
	 'keyframe_inner_radius.hpp',
	 'keyframe_is_collision_enabled.hpp',
	 'keyframe_length.hpp',
	 'keyframe_numeric.hpp',
	 'keyframe_opacity.hpp',
	 'keyframe_paint_opacity.hpp',
	 'keyframe_path_vertices.hpp',
	 'keyframe_pos_x.hpp',
	 'keyframe_pos_y.hpp',
	 'keyframe_radial_gradient.hpp',
	 'keyframe_rotation.hpp',
	 'keyframe_scale_x.hpp',
	 'keyframe_scale_y.hpp',
	 'keyframe_sequence.hpp',
	 'keyframe_shape_height.hpp',
	 'keyframe_shape_width.hpp',
	 'keyframe_stroke_end.hpp',
	 'keyframe_stroke_offset.hpp',
	 'keyframe_stroke_start.hpp',
	 'keyframe_stroke_width.hpp',
	 'keyframe_trigger.hpp',
	 'keyframe_with_interpolation.hpp'
        ], subdir : 'flare/animation/keyframes')

